recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:5: error: type mismatch;
 found   : Unit
 required: Int
   for(k<-1 to 3){
        ^